# rmp-paul

./: .gitignore  README.md  cargo-generate.toml  flake.nix  justfile  platform.rhai
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/counter/: ExampleInstrumentedTest.kt
android/app/src/main/java/com/example/counter/: Counter.kt  MainActivity.kt  ViewModel.kt
android/app/src/main/java/{{bundle-id-tld}}/{{bundle-id-org}}/{{bundle-id-app}}/: MainActivity.kt  ViewModel.kt  {{project-name}}.kt
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/example/counter/: ExampleUnitTest.kt
ios/Counter/: CounterApp.swift  ViewModel.swift
ios/Counter.xcodeproj/project.xcworkspace/xcuserdata/justin.xcuserdatad/: UserInterfaceState.xcuserstate
ios/{{project-name|capitalize}}/: ViewModel.swift  {{project-name|capitalize}}App.swift
ios/{{project-name|capitalize}}.xcodeproj/: project.pbxproj
ios/{{project-name|capitalize}}.xcodeproj/xcuserdata/justin.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/: Cargo.toml
rust/src/: app.rs  lib.rs  logging.rs  view_model.rs
scripts/: build-android.sh  build-ios.sh  run-android.sh  run-ios.sh
