[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "staticlib"]
name = "{{project-name}}"

[dependencies]
crossbeam = "0.8.4"
once_cell = "1.19.0"
uniffi = { version = "0.27.2", features = ["cli"] }
# FIXME: only using bundled b/c ndk couldn't link sqlite
# libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
# rusqlite = { version = "0.33.0", features = ["bundled", "hooks"] }
android_logger = "0.10"
log = "0.4"
# sqlite-watcher = { version = "0.4.2", features = ["rusqlite"] }
sqlite-watcher = { git = "https://github.com/justinmoon/sqlite-watcher", features = [
    "rusqlite",
] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }


# [build-dependencies]
# uniffi = { version = "0.27.2", features = ["build"] }
